# game-engine-lite

./: CMakeLists.txt  CMakePresets.json  README.md  buildassets
assets/scripts/: level1.lua  level2.lua  my_script.lua
src/: CMakeLists.txt  game.cpp  game.hpp  main.cpp
src/asset_manager/: CMakeLists.txt  asset_manager.cpp  asset_manager.hpp
src/components/: CMakeLists.txt  animation_component.hpp  box_collider_component.hpp  camera_component.hpp  health_component.hpp  keyboard_control_component.hpp  projectile_component.hpp  projectile_emitter_component.hpp  rigidbody_component.hpp  script_component.hpp  sprite_component.hpp  text_label_component.hpp  transform_component.hpp
src/ecs/: CMakeLists.txt  ecs.cpp  ecs.hpp
src/event_manager/: CMakeLists.txt  event_manager.cpp  event_manager.hpp
src/events/: CMakeLists.txt  collision_event.hpp  event.hpp  key_pressed_event.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  level_loader.cpp  level_loader.hpp
src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
src/systems/: CMakeLists.txt  animation_system.hpp  camera_follow_system.hpp  camera_movement_system.hpp  collision_system.hpp  damage_system.hpp  keyboard_control_system.hpp  keyboard_movement_system.hpp  movement_system.hpp  projectile_duration_system.hpp  projectile_emit_system.hpp  render_collision_system.hpp  render_gui_system.hpp  render_health_system.hpp  render_system.hpp  render_text_system.hpp  script_system.hpp
